# dwutil

./: Cargo.toml  LICENSE  README.md
examples/: indicator.rs  main.rs
src/: lib.rs  utils.rs
src/cas/: default.rs  mod.rs
src/decompress/: gz.rs  mod.rs  tar.rs  targz.rs  tarxz.rs  xz.rs  zip.rs
src/hash/: md5.rs  mod.rs  sha.rs
src/indicator/: indicatif.rs  log.rs  mod.rs  silent.rs
src/tests/: cas.rs  compress.rs  hash.rs  mod.rs
