[package]
name = "dwutil"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["rt", "sync"] }
ureq = "2.9"
tracing = "0.1"
indicatif = "0.17"
flate2 = { version = "1.0", features = ["rust_backend"] } # evita dependencias nativas
tar = "0.4"
zip = "0.6"
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.9", optional = true }
md5 = { version = "0.8.0", optional = true }
hex = { version = "0.4.3", optional = true }

[profile.release]
opt-level = "z"           # optimiza para tamaño
lto = true                # link time optimization
codegen-units = 1         # más tiempo de compilación, menor tamaño
panic = "abort"           # elimina info de unwinding
strip = "symbols"         # remueve símbolos de depuración

[dev-dependencies]
sha1 = "0.10.6"
tempfile = "3.20.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }

[features]
default = ["sha", "md5"]
sha = ["dep:sha1", "dep:sha2", "dep:hex"]
md5 = ["dep:md5", "dep:hex"]
