[package]
name = "dwutil"
version = "0.1.1"
edition = "2024"
description = "simple and easy use downloader"
license = "MIT"
author = ["prefix63 <prefix6@outlook.es>"]
readme = "README.md"
repository = "https://github.com/prefix63/dwutil"
categories = ["multimedia", "command-line-interface", "command-line-utilities"]
keywords = ["download", "cli", "assets", "resources"]

[dependencies]
# For request the resources
ureq = "2.9"
# Logger
tracing = "0.1"
# Convert hash to string
hex = { version = "0.4.3" }
# Generate tempfiles on stores
tempfile = "3.20.0"

# Indicatif progress bar
indicatif = { version = "0.17", optional = true }
# Gzip decompresion
flate2 = { version = "1.0", features = ["rust_backend"], optional = true }
# XZ decompression
xz2 = { version = "0.1.7", optional = true }
# Tar.* decompression
tar = { version = "0.4", optional = true }
# Zip decompression
zip = { version = "0.6", optional = true }
# Hashers
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.9", optional = true }
md5 = { version = "0.8.0", optional = true }
# Check if the file is a compression format
infer = { version = "0.19.0", optional = true }

[profile.release]
opt-level = "z"           
lto = true                
codegen-units = 1        
panic = "abort"           
strip = "symbols"         

[dev-dependencies]
sha1 = "0.10.6"
tempfile = "3.20.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }

[features]
default = ["sha", "md5", "zip", "targz", "indicatif", "tarxz"]

full-decoders = ["zip", "targz", "tarxz"]
full-hashers = ["sha", "md5"]
full = ["full-decoders", "full-hashers", "indicatif"]

sha = ["dep:sha1", "dep:sha2"]
md5 = ["dep:md5"]
indicatif = ["dep:indicatif"]
gz = ["dep:flate2", "dep:infer"]
zip = ["dep:zip", "dep:infer"]
tar = ["dep:tar", "dep:infer"]
xz = ["dep:xz2", "dep:infer"]
targz = ["tar", "gz"]
tarxz = ["tar", "xz"]
